# WPFSocketDrawer

./: .gitignore  README.md  SocketDrawer.sln
Server/: CMakeLists.txt  SPI.cpp  Server  flir_scale.h  main.cpp
SocketDrawer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SocketDrawer.cs  SocketDrawer.csproj
SocketDrawer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
