#요구 CMAKE 최소 버전
CMAKE_MINIMUM_REQUIRED( VERSION 2.8.12.2 )

#프로젝트 이름 및 버전
PROJECT( "SERVER" )
SET( PROJECT_VERSION_MAJOR 0 )
SET( PROJECT_VERSION_MINOR 1 )

#빌드 형상(Configuration) 및 Makefile 생성 여부
SET ( CMAKE_BUILD_TYPE Debug )
SET ( CMAKE_VERBOSE_MAKEFILE true)

MESSAGE ( ${CMAKE_PROJECT_NAME} )
FIND_PACKAGE( OpenCV REQUIRED )
IF( OpenCV_FOUND )
MESSAGE( STATUS  "COMPILING THERMOCAMERA" )

INCLUDE_DIRECTORIES( "${OpenCV_INCLUDE_DIRS}" )

ADD_EXECUTABLE( Server main.cpp SPI.cpp )
TARGET_LINK_LIBRARIES( Server ${OpenCV_LIBS} )
ELSE()
MESSAGE( FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM" )
ENDIF()

